overflow issue about page mobile fix

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -78,7 +78,6 @@ p {
 
 	.info-column-container {
 		grid-template-columns: 1fr;
-		overflow-y: auto;
 	}
 	.info-spacer {
 		display: none;
